create section second and third

--- a/index.html
+++ b/index.html
@@ -67,13 +67,42 @@
             <div class="col-md-offset-1 col-md-4">
                 <img src="images/phone.png" alt="">
             </div>
-
         </div>
     </div>
 </section>
 <section class="second">
+    <div class="container">
     <h2> DETAILS ABOUT BOUNCY</h2>
 <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui<br> blanditiis praesentium</p>
+    <div class="icon-bar">
+        <div><a href="#"> <i class="far fa-heart"></i> </a></div>
+        <div><a href="#"> <i class="fas fa-mouse-pointer"></i> </a></div>
+        <div><a href="#"> <i class="far fa-lightbulb"></i> </a></div>
+    </div>
+    <div class="row">
+        <div class="col-md-offset-1 col-md-3" >
+            <h2>Creative Ideas</h2>
+            <p>At <span>vero</span> eos et accusamus et iusto odio <br>
+                dignissimos <strong>ducimus</strong> qui blanditiis <br>
+                praesentium voluptatum deleniti atque <br>
+                corrupti quos dolores  </p>
+        </div>
+        <div class="col-md-offset-1 col-md-7">
+            <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blan- <br>
+                ditiis praesentium voluptatum deleniti atque <strong>corrupti quos</strong> dolores et  <br>
+                quas molestias <strong>excepturi</strong> sint occaecati cupiditate non provident, <strong>simi- <br>
+                lique</strong> sunt in culpa qui officia deserunt mollitia animi, id est laborum et <br>
+                dolorum fuga. Et harum quidem r </p>
+        </div>
+    </div>
+    </div>
+
+</section>
+<section class="third">
+    <div class="container">
+        <h2> FEATURED PROJECTS</h2>
+        <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui<br> blanditiis praesentium</p>
+    </div>
 
 </section>
 </body>
