create a four section

--- a/index.html
+++ b/index.html
@@ -103,7 +103,15 @@
         <h2> FEATURED PROJECTS</h2>
         <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui<br> blanditiis praesentium</p>
     </div>
-
+</section>
+<section class="four">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-sm-6 first hov"></div>
+            <div class="col-sm-3 two hov"></div>
+            <div class="col-sm-3 three hov"></div>
+        </div>
+    </div>
 </section>
 </body>
 </html>
