--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
             <div class="col-md-3 col-md-offset-1">
                 <a href="#">Submit Now</a>
             </div>
+        </div>
     </div>
 </section>
 
