create a progress bar

--- a/index.html
+++ b/index.html
@@ -125,7 +125,52 @@
         </div>
     </div>
 </section>
+<section class="six">
+    <div class="container">
+        <h2>Our Services</h2>
+        <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui <br> blanditiis praesentium</p>
+        <div class="row">
+            <div class="col-md-6">
 
+            </div>
+            <div class="col-md-6">
+                <div class="col-md-4">
+                    <div class="progress blue">
+                    <span class="progress-left">
+                        <span class="progress-bar"></span>
+                    </span>
+                        <span class="progress-right">
+                        <span class="progress-bar"></span>
+                    </span>
+                        <div class="progress-value">80%</div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="progress yellow">
+                    <span class="progress-left">
+                        <span class="progress-bar"></span>
+                    </span>
+                        <span class="progress-right">
+                        <span class="progress-bar"></span>
+                    </span>
+                        <div class="progress-value">75%</div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="progress yellow">
+                    <span class="progress-left">
+                        <span class="progress-bar"></span>
+                    </span>
+                        <span class="progress-right">
+                        <span class="progress-bar"></span>
+                    </span>
+                        <div class="progress-value">60%</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 
 </body>
 </html>
