change a progress bar

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                     </div>
                 </div>
                 <div class="col-md-4">
-                    <div class="progress yellow">
+                    <div class="progress pink">
                     <span class="progress-left">
                         <span class="progress-bar"></span>
                     </span>
