change a progress bar

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <link rel="stylesheet" href="fontawesome/web-fonts-with-css/css/fontawesome-all.min.css">
+    <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 </head>
@@ -131,8 +132,13 @@
         <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui <br> blanditiis praesentium</p>
         <div class="row">
             <div class="col-md-6">
-
-            </div>
+                <!--<div class="icon-bar">-->
+                    <!--<div><a href="#"> <i class="fa fa-wrench" aria-hidden="true"></i> </a></div>-->
+                    <!--<div><a href="#"> <i class="fa fa-pencil" aria-hidden="true"></i> </a></div>-->
+                    <!--<div><a href="#"> <i class="fa fa-gamepad" aria-hidden="true"></i> </a></div>-->
+                    <!--<div><a href="#"> <i class="fa fa-plug" aria-hidden="true"></i> </a></div>-->
+                <!--</div>-->
+            <!--</div>-->
             <div class="col-md-6">
                 <div class="col-md-4">
                     <div class="progress blue">
@@ -144,6 +150,7 @@
                     </span>
                         <div class="progress-value">80%</div>
                     </div>
+                    <p>Branding</p>
                 </div>
                 <div class="col-md-4">
                     <div class="progress yellow">
@@ -155,6 +162,7 @@
                     </span>
                         <div class="progress-value">75%</div>
                     </div>
+                    <p>Web Design</p>
                 </div>
                 <div class="col-md-4">
                     <div class="progress pink">
@@ -166,6 +174,7 @@
                     </span>
                         <div class="progress-value">60%</div>
                     </div>
+                    <p>UI/UX</p>
                 </div>
             </div>
         </div>
