change a progress bar

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                     <!--<div><a href="#"> <i class="fa fa-gamepad" aria-hidden="true"></i> </a></div>-->
                     <!--<div><a href="#"> <i class="fa fa-plug" aria-hidden="true"></i> </a></div>-->
                 <!--</div>-->
-            <!--</div>-->
+            </div>
             <div class="col-md-6">
                 <div class="col-md-4">
                     <div class="progress blue">
