--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
     <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis <br> praesentium voluptatum</p>
     <div class="circle"> <i class="fas fa-angle-down"></i> </div>
 </header>
+<!---------------------------END Header--------------------------->
+<!---------------------------BEGIN Section-1--------------------------->
 <section class="first">
     <div class="container">
         <div class="row">
@@ -71,6 +73,8 @@
         </div>
     </div>
 </section>
+<!---------------------------END Section-1--------------------------->
+<!---------------------------BEGIN Section-2--------------------------->
 <section class="second">
     <div class="container">
     <h2> DETAILS ABOUT BOUNCY</h2>
@@ -97,14 +101,17 @@
         </div>
     </div>
     </div>
-
 </section>
+<!---------------------------END Section-2--------------------------->
+<!---------------------------BEGIN Section-3--------------------------->
 <section class="third">
     <div class="container">
         <h2> FEATURED PROJECTS</h2>
         <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui<br> blanditiis praesentium</p>
     </div>
 </section>
+<!---------------------------END Section-3--------------------------->
+<!---------------------------BEGIN Section-4--------------------------->
 <section class="four">
     <div class="container-fluid">
         <div class="row">
@@ -114,6 +121,8 @@
         </div>
     </div>
 </section>
+<!---------------------------END Section-4--------------------------->
+<!---------------------------BEGIN Section-5--------------------------->
 <section class="five">
     <div class="container">
         <div class="row">
@@ -126,19 +135,31 @@
         </div>
     </div>
 </section>
+<!---------------------------END Section-5--------------------------->
+<!---------------------------BEGIN Section-6--------------------------->
 <section class="six">
     <div class="container">
-        <h2>Our Services</h2>
+        <h2>OUR SERVICES</h2>
         <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui <br> blanditiis praesentium</p>
         <div class="row">
-            <div class="col-md-6">
-                <!--<div class="icon-bar">-->
-                    <!--<div><a href="#"> <i class="fa fa-wrench" aria-hidden="true"></i> </a></div>-->
-                    <!--<div><a href="#"> <i class="fa fa-pencil" aria-hidden="true"></i> </a></div>-->
-                    <!--<div><a href="#"> <i class="fa fa-gamepad" aria-hidden="true"></i> </a></div>-->
-                    <!--<div><a href="#"> <i class="fa fa-plug" aria-hidden="true"></i> </a></div>-->
-                <!--</div>-->
+            <div class="col-md-1">
+                <div class="icon-bar">
+                    <div><a href="#"> <i class="fa fa-wrench" aria-hidden="true"></i> </a></div>
+                    <div><a href="#"> <i class="fa fa-pencil" aria-hidden="true"></i> </a></div>
+                    <div><a href="#"> <i class="fa fa-gamepad" aria-hidden="true"></i> </a></div>
+                    <div><a href="#"> <i class="fa fa-plug" aria-hidden="true"></i> </a></div>
+                </div>
             </div>
+                <div class="col-md-5">
+                <h2>Graphic Design</h2>
+                    <p>At vero eos et accusamus et <strong>iusto</strong> odio dignissi- <br>
+                        mos <strong>ducimus</strong> qui blanditiis praesentium volup-<br>
+                        tatum deleniti</p>
+                <p class="two">quos dolores et quas molestias excepturi sint occaecati<br>
+                    cupiditate non provident, <strong>similique sunt</strong> in culpa qui <br>
+                    officia deserunt mollitia animi, id est laborum et do- <br>
+                    lorum fuga. </p>
+                </div>
             <div class="col-md-6">
                 <div class="col-md-4">
                     <div class="progress blue">
@@ -180,6 +201,8 @@
         </div>
     </div>
 </section>
+<!---------------------------END Section-6--------------------------->
+<!---------------------------BEGIN Section-7--------------------------->
 
 </body>
 </html>
