--- a/index.html
+++ b/index.html
@@ -203,6 +203,23 @@
 </section>
 <!---------------------------END Section-6--------------------------->
 <!---------------------------BEGIN Section-7--------------------------->
-
+<section class="seven">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6" >
+                <h2>impressed ?</h2>
+                <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditi-<br>
+                    is praesentium voluptatum deleniti atque corrupti quos dolores et quas <br> molestias</p>
+                <p>- Abdullah Noman</p>
+                <p>Creatice Director, <span>Code Cafe</span></p>
+            </div>
+            <div class="col-md-offset-1 col-md-5">
+                <img src="images/macbook.png">
+            </div>
+        </div>
+    </div>
+</section>
+<!---------------------------END Section-7--------------------------->
+<!---------------------------BEGIN Section-8--------------------------->
 </body>
 </html>
