--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <title>Bouncy</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/bootstrap-theme.css">
+    <link rel="stylesheet" href="css/stylegallery.css">
     <link rel="stylesheet" href="css/style.css">
     <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <link rel="stylesheet" href="fontawesome/web-fonts-with-css/css/fontawesome-all.min.css">
     <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400" rel="stylesheet">
@@ -57,7 +57,7 @@
 <section class="first">
     <div class="container">
         <div class="row">
-            <div class="col-md-6 col-md-offset-1" >
+            <div class="col-md-6 col-sm-6 col-md-offset-1" >
                 <h2>This is Bouncy</h2>
                 <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui<br>
                     blanditiis praesentium voluptatum deleniti atque corrupti quos <br>
@@ -67,7 +67,7 @@
                     facilis est et expedita distinctio. </p>
                 <a href="#">Read More</a>
             </div>
-            <div class="col-md-offset-1 col-md-4">
+            <div class="col-md-offset-1 col-md-4 col-sm-5 col-sm-offset-1">
                 <img src="images/phone.png" alt="">
             </div>
         </div>
@@ -85,14 +85,14 @@
         <div><a href="#"> <i class="far fa-lightbulb"></i> </a></div>
     </div>
     <div class="row">
-        <div class="col-md-offset-1 col-md-3" >
+        <div class="col-md-offset-1 col-md-3 col-sm-3 col-sm-offset-1" >
             <h2>Creative Ideas</h2>
             <p>At <span>vero</span> eos et accusamus et iusto odio <br>
                 dignissimos <strong>ducimus</strong> qui blanditiis <br>
                 praesentium voluptatum deleniti atque <br>
                 corrupti quos dolores  </p>
         </div>
-        <div class="col-md-offset-1 col-md-7">
+        <div class="col-md-offset-1 col-md-7 col-sm-7 col-sm-offset-1">
             <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blan- <br>
                 ditiis praesentium voluptatum deleniti atque <strong>corrupti quos</strong> dolores et  <br>
                 quas molestias <strong>excepturi</strong> sint occaecati cupiditate non provident, <strong>simi- <br>
@@ -126,10 +126,10 @@
 <section class="five">
     <div class="container">
         <div class="row">
-            <div class="col-md-8 ">
+            <div class="col-md-8 col-sm-7">
             <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis </p>
         </div>
-            <div class="col-md-3 col-md-offset-1">
+            <div class="col-md-3 col-md-offset-1 col-sm-4 col-sm-offset-1">
                 <a href="#">Submit Now</a>
             </div>
         </div>
@@ -142,7 +142,7 @@
         <h2>OUR SERVICES</h2>
         <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui <br> blanditiis praesentium</p>
         <div class="row">
-            <div class="col-md-1">
+            <div class="col-md-1 col-sm-1">
                 <div class="icon-bar">
                     <div><a href="#"> <i class="fa fa-wrench" aria-hidden="true"></i> </a></div>
                     <div><a href="#"> <i class="fa fa-pencil" aria-hidden="true"></i> </a></div>
@@ -150,7 +150,7 @@
                     <div><a href="#"> <i class="fa fa-plug" aria-hidden="true"></i> </a></div>
                 </div>
             </div>
-                <div class="col-md-5">
+                <div class="col-md-5 col-sm-5">
                 <h2>Graphic Design</h2>
                     <p>At vero eos et accusamus et <strong>iusto</strong> odio dignissi- <br>
                         mos <strong>ducimus</strong> qui blanditiis praesentium volup-<br>
@@ -160,7 +160,7 @@
                     officia deserunt mollitia animi, id est laborum et do- <br>
                     lorum fuga. </p>
                 </div>
-            <div class="col-md-6">
+            <div class="col-md-6 col-sm-6">
                 <div class="col-md-4">
                     <div class="progress blue">
                     <span class="progress-left">
@@ -221,5 +221,72 @@
 </section>
 <!---------------------------END Section-7--------------------------->
 <!---------------------------BEGIN Section-8--------------------------->
+<section class="eight">
+    <div class="container">
+
+        <!--<div class="gamma-container gamma-loading" id="gamma-container">-->
+
+            <!--<ul class="gamma-gallery">-->
+                <!--<li>-->
+                    <!--<div data-alt="img01" data-description="<h3>Assemblage</h3>" data-max-width="1800" data-max-height="2400">-->
+                        <!--<div data-src="images/gallary1.png" data-min-width="1300"></div>-->
+                        <!--<div data-src="images/gallary1.png" data-min-width="1000"></div>-->
+                        <!--<div data-src="images/gallary1.png" data-min-width="700"></div>-->
+                        <!--<div data-src="images/gallary1.png" data-min-width="300"></div>-->
+                        <!--<div data-src="images/gallary1.png" data-min-width="200"></div>-->
+                        <!--<div data-src="images/gallary1.jpg" data-min-width="140"></div>-->
+                        <!--<div data-src="images/gallary1.jpg"></div>-->
+                        <!--<noscript>-->
+                            <!--<img src="images/xsmall/1.jpg" alt="img01"/>-->
+                        <!--</noscript>-->
+                    <!--</div>-->
+                <!--</li>-->
+                <!--<li> &lt;!&ndash; ... &ndash;&gt; </li>-->
+                <!--&lt;!&ndash; ... &ndash;&gt;-->
+            <!--</ul>-->
+
+            <!--<div class="gamma-overlay"></div>-->
+
+        <!--</div>-->
+
+    <!--</div>-->
+<!--</section>-->
+<!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>-->
+<!--<script src="js/jquery.masonry.min.js"></script>-->
+<!--<script src="js/jquery.history.js"></script>-->
+<!--<script src="js/js-url.min.js"></script>-->
+<!--<script src="js/jquerypp.custom.js"></script>-->
+<!--<script src="js/gamma.js"></script>-->
+<!--<script type="text/javascript">-->
+    <!--$(function() {-->
+
+        <!--var GammaSettings = {-->
+            <!--// order is important!-->
+            <!--viewport : [ {-->
+                <!--width : 1200,-->
+                <!--columns : 5-->
+            <!--}, {-->
+                <!--width : 900,-->
+                <!--columns : 4-->
+            <!--}, {-->
+                <!--width : 500,-->
+                <!--columns : 3-->
+            <!--}, {-->
+                <!--width : 320,-->
+                <!--columns : 2-->
+            <!--}, {-->
+                <!--width : 0,-->
+                <!--columns : 2-->
+            <!--} ]-->
+        <!--};-->
+
+        <!--Gamma.init( GammaSettings );-->
+
+    <!--});-->
+
+<!--</script>-->
+
+    </div>
+</section>
 </body>
 </html>
