--- a/index.html
+++ b/index.html
@@ -225,8 +225,20 @@
 <!---------------------------BEGIN Section-8--------------------------->
 <section class="eight">
     <div class="container">
+        <h2>THE PORTFOLIO</h2>
+        <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui <br> blanditiis praesentium</p>
+        <ul class="menu">
+            <li><a href="#">All Works</a></li>
+            <li><a href="#">Print</a></li>
+            <li><a href="#">Identity</a></li>
+            <li><a href="#">Branding</a></li>
+            <li><a href="#">Web</a></li>
+            <li><a href="#">HTML</a></li>
+            <li><a href="#">Wordpress</a></li>
 
-        <!-- Codrops top bar -->
+        </ul>
+        <!---------------------------BEGIN GALLERY--------------------------->
+         <!--Codrops top bar-->
         <!--<div class="codrops-top clearfix">-->
             <!--<a href="http://tympanus.net/Tutorials/HeadingSets/">-->
                 <!--<strong>&laquo; Previous Demo: </strong>Heading Set Styling-->
@@ -238,23 +250,17 @@
                     <!--</a>-->
                 <!--</span>-->
         <!--</div>&lt;!&ndash;/ Codrops top bar &ndash;&gt;-->
-
         <div class="main">
-            <!--<header class="clearfix">-->
+            <!--<div class="clearfix">-->
 
                 <!--<h1>Gamma Gallery<span>A responsive image gallery experiment</span></h1>-->
 
                 <!--<div class="support-note">-->
                     <!--<span class="note-ie">Sorry, only modern browsers.</span>-->
                 <!--</div>-->
-
-            <!--</header>-->
-
+            <!--</div>-->
             <div class="gamma-container gamma-loading" id="gamma-container">
-
                 <ul class="gamma-gallery">
-
-
                     <li>
                         <div data-alt="img03" data-description="<h3>Sky high</h3>" data-max-width="1800" data-max-height="1350">
                             <div data-src="images/xxxlarge/gallary1.png" data-min-width="1300"></div>
@@ -368,7 +374,6 @@
                         </div>
                     </li>
                     <li>
-                        <!-вторая 10->
                         <div data-alt="img03" data-description="<h3>Sky high</h3>" data-max-width="1800" data-max-height="1350">
                             <div data-src="images/xxxlarge/gallary10.png" data-min-width="1300"></div>
                             <div data-src="images/xxlarge/gallary10.png" data-min-width="1000"></div>
@@ -383,7 +388,6 @@
                         </div>
                     </li>
                     <li>
-                        <!-третья 12->
                         <div data-alt="img03" data-description="<h3>Sky high</h3>" data-max-width="1800" data-max-height="1350">
                             <div data-src="images/xxxlarge/gallary12.png" data-min-width="1300"></div>
                             <div data-src="images/xxlarge/gallary12.png" data-min-width="1000"></div>
@@ -398,7 +402,6 @@
                         </div>
                     </li>
                     <li>
-                        <!-четвертая 11->
                         <div data-alt="img03" data-description="<h3>Sky high</h3>" data-max-width="1800" data-max-height="1350">
                             <div data-src="images/xxxlarge/gallary11.png" data-min-width="1300"></div>
                             <div data-src="images/xxlarge/gallary11.png" data-min-width="1000"></div>
@@ -413,7 +416,6 @@
                         </div>
                     </li>
                     <li>
-                        <!-первая 9->
                         <div data-alt="img03" data-description="<h3>Sky high</h3>" data-max-width="1800" data-max-height="1350">
                             <div data-src="images/xxxlarge/gallary9.png" data-min-width="1300"></div>
                             <div data-src="images/xxlarge/gallary9.png" data-min-width="1000"></div>
@@ -428,13 +430,9 @@
                         </div>
                     </li>
                 </ul>
-
                 <div class="gamma-overlay"></div>
-
-                <div id="loadmore" class="loadmore">Example for loading more items...</div>
-
+                <!--<div id="loadmore" class="loadmore">Example for loading more items...</div>-->
             </div>
-
         </div><!--/main-->
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
@@ -485,5 +483,8 @@
         });
     </script>
 </section>
+<!---------------------------END Section-8 Gallery--------------------------->
+<!---------------------------BEGIN Section-9--------------------------->
+
 </body>
 </html>
