Correct div data-alt

--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
             <div class="gamma-container gamma-loading" id="gamma-container">
                 <ul class="gamma-gallery">
                     <li id="liAll">
-                        <div data-alt="img03" data-description="<h3>All Works</h3>" data-max-width="1800" data-max-height="1350">
+                        <div data-alt="imgAllWorks" data-description="<h3>All Works</h3>" data-max-width="1800" data-max-height="1350">
                             <div data-src="images/xxxlarge/gallary1.png" data-min-width="1300"></div>
                             <div data-src="images/xxlarge/gallary1.png" data-min-width="1000"></div>
                             <div data-src="images/xlarge/gallary1.png" data-min-width="700"></div>
@@ -282,7 +282,7 @@
                         </div>
                     </li>
                     <li id="liPrint">
-                        <div data-alt="img03" data-description="<h3>Print</h3>" data-max-width="1800" data-max-height="1350">
+                        <div data-alt="imgPrint" data-description="<h3>Print</h3>" data-max-width="1800" data-max-height="1350">
                             <div data-src="images/xxxlarge/gallary2.png" data-min-width="1300"></div>
                             <div data-src="images/xxlarge/gallary2.png" data-min-width="1000"></div>
                             <div data-src="images/xlarge/gallary2.png" data-min-width="700"></div>
@@ -296,7 +296,7 @@
                         </div>
                     </li>
                     <li id="liIdentity">
-                        <div data-alt="img03" data-description="<h3>Identity</h3>" data-max-width="1800" data-max-height="1350">
+                        <div data-alt="imgIdentity" data-description="<h3>Identity</h3>" data-max-width="1800" data-max-height="1350">
                             <div data-src="images/xxxlarge/gallary3.png" data-min-width="1300"></div>
                             <div data-src="images/xxlarge/gallary3.png" data-min-width="1000"></div>
                             <div data-src="images/xlarge/gallary3.png" data-min-width="700"></div>
@@ -310,7 +310,7 @@
                         </div>
                     </li>
                     <li id="liBranding">
-                        <div data-alt="img03" data-description="<h3>Branding</h3>" data-max-width="1800" data-max-height="1350">
+                        <div data-alt="imgBranding" data-description="<h3>Branding</h3>" data-max-width="1800" data-max-height="1350">
                             <div data-src="images/xxxlarge/gallary4.png" data-min-width="1300"></div>
                             <div data-src="images/xxlarge/gallary4.png" data-min-width="1000"></div>
                             <div data-src="images/xlarge/gallary4.png" data-min-width="700"></div>
@@ -324,7 +324,7 @@
                         </div>
                     </li>
                     <li id="liWeb">
-                        <div data-alt="img03" data-description="<h3>Web</h3>" data-max-width="1800" data-max-height="1350">
+                        <div data-alt="imgWeb" data-description="<h3>Web</h3>" data-max-width="1800" data-max-height="1350">
                             <div data-src="images/xxxlarge/gallary6.png" data-min-width="1300"></div>
                             <div data-src="images/xxlarge/gallary6.png" data-min-width="1000"></div>
                             <div data-src="images/xlarge/gallary6.png" data-min-width="700"></div>
@@ -338,7 +338,7 @@
                         </div>
                     </li>
                     <li id="liHTML">
-                        <div data-alt="img03" data-description="<h3>HTML</h3>" data-max-width="1800" data-max-height="1350">
+                        <div data-alt="imgHTML" data-description="<h3>HTML</h3>" data-max-width="1800" data-max-height="1350">
                             <div data-src="images/xxxlarge/gallary7.png" data-min-width="1300"></div>
                             <div data-src="images/xxlarge/gallary7.png" data-min-width="1000"></div>
                             <div data-src="images/xlarge/gallary7.png" data-min-width="700"></div>
@@ -352,7 +352,7 @@
                         </div>
                     </li>
                     <li id="liWordpress">
-                        <div data-alt="img03" data-description="<h3>Wordpress</h3>" data-max-width="1800" data-max-height="1350">
+                        <div data-alt="imgWordpress" data-description="<h3>Wordpress</h3>" data-max-width="1800" data-max-height="1350">
                             <div data-src="images/xxxlarge/gallary5.png" data-min-width="1300"></div>
                             <div data-src="images/xxlarge/gallary5.png" data-min-width="1000"></div>
                             <div data-src="images/xlarge/gallary5.png" data-min-width="700"></div>
